[package]
name = "log-analyser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"
comfy-table = "4.1.1"