[package]
name = "log-analyser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
comfy-table = "4.1.1"
structopt = "0.3.23"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"